--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
   
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
+
+  
   
 </head>
 <body>
@@ -21,3 +24,5 @@
   
 </body>
 </html>
+
+
